--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,12 +5,16 @@
         "node": true
     },
     "extends": [
-        "airbnb-base"
+        "google"
     ],
     "parserOptions": {
         "ecmaVersion": 11,
         "sourceType": "module"
     },
     "rules": {
+			"require-jsdoc" : 0,
+			"indent": [
+				"error", "space"
+			]
     }
 }
