--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "browser": true,
         "es2020": true,
-        "node": true
+        "node": true,
+        "jasmine": true
     },
     "extends": [
         "google"
@@ -12,9 +13,20 @@
         "sourceType": "module"
     },
     "rules": {
-			"require-jsdoc" : 0,
-			"indent": [
-				"error", "space"
-			]
-    }
+        "require-jsdoc" : 0,
+        "indent": [
+            "error", "space"
+        ],
+        "import/no-extraneous-dependencies": 0,
+        "no-console": 0,
+        "no-underscore-dangle": 0,
+        "no-restricted-globals": 0,
+        "linebreak-style": 0,
+        "consistent-return": 0,
+        "no-prototype-builtins": 0,
+        "import/prefer-default-export": 0,
+        "no-return-assign": 0,
+        "class-methods-use-this": 0
+    },
+    "plugins": ["jasmine"]
 }
