--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,12 @@
         "browser": true,
         "es2020": true,
         "node": true,
-        "jasmine": true
+        "jasmine": true,
+        "codeceptjs/codeceptjs": true
     },
     "extends": [
-        "google"
+        "google",
+        "plugin:codeceptjs/recommended"
     ],
     "parserOptions": {
         "ecmaVersion": 11,
@@ -28,5 +30,5 @@
         "no-return-assign": 0,
         "class-methods-use-this": 0
     },
-    "plugins": ["jasmine"]
+    "plugins": ["jasmine", "codeceptjs"]
 }
